# influx_cpu_temp

./: Cargo.toml
src/: main.rs  query.txt
